# thermal-printer

./: .gitignore  README.md  main.py  printer.py  pyproject.toml
static/: app.js  index.html
